src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Honorarium_Actual__c</fullName>
        <label>Honorarium (Actual)</label>
        <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Revenue_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Honorarium</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Honorarium_Budget__c</fullName>
        <label>Honorarium (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honorarium_Cost_Notes__c</fullName>
        <description>Used on NA Activity Request Form</description>
        <label>Honorarium Cost Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hotel_Accommodation_Actual__c</fullName>
        <label>Hotel &amp; Accommodation (Actual)</label>
        <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Revenue_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Hotel &amp; Accommodation</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hotel_Accommodation__c</fullName>
        <label>Hotel &amp; Accommodation (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Check_Out_Date__c</fullName>
        <label>Hotel Check Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Check_in_Date__c</fullName>
        <label>Hotel Check In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Information__c</fullName>
        <label>Hotel Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Include_in_Dealer_Community__c</fullName>
        <label>Include in Dealer Community?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Training_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information for France</description>
        <label>Initial Training (FR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructional_Hours__c</fullName>
        <description>Used for reporting (CE-reporting). Shows the summarized value of session length (excluding session type &quot;Social Event&quot; and cancelled events) - populated via APEX</description>
        <inlineHelpText>Used for reporting (CE-reporting). Shows the summarized value of session length (excluding session type &quot;Social Event&quot; and cancelled events) - populated via APEX</inlineHelpText>
        <label>Instructional Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Comments_D__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fill in this checkbox if this Session is Internal training. To be used for Global Trainers</description>
        <inlineHelpText>Fill in this checkbox if this Session is Internal training.</inlineHelpText>
        <label>Internal training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Speaker_involved__c</fullName>
        <description>This field roll-ups the international speaker field on the member. if this field is filled, it means that there is an international speaker involved. Used for sharing</description>
        <label>International Speaker involved</label>
        <summaryFilterItems>
            <field>CampaignMember.International_Speaker__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>International_speaker_involved_sharing__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Help field for sharing of the international speaker involved roll-up summary field. As roll-up summary fields are not shareable this fields is a help field that takes the same value as on the summary field</description>
        <label>International speaker involved(sharing)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invitation_Course_Flyer_Format__c</fullName>
        <label>Distribution Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing: Self mailer</fullName>
                </value>
                <value>
                    <fullName>Mailing: In 3rd Party Envelope</fullName>
                </value>
                <value>
                    <fullName>Handout</fullName>
                </value>
                <value>
                    <fullName>Email: PDF attachment</fullName>
                </value>
                <value>
                    <fullName>Email: e-blast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invitation_Course_Flyer_Quantity__c</fullName>
        <label>Invitation/Course Flyer: Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invitation_Course_Flyer_Required__c</fullName>
        <label>Invitation/Course Flyer Created By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DENTSPLY Implants</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>None Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invitation_Course_Flyer_Style__c</fullName>
        <label>Invitation/Course Flyer: Style</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Invitation_Course_Flyer_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DENTSPLY Implants</fullName>
                </value>
                <value>
                    <fullName>Third Party/Co-sponsor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invitation_Course_Flyer__c</fullName>
        <label>Invitation/Course Flyer: Design</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KITS_RESTO_DIRECT_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KITS RESTO DIRECT (FR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KITS_RESTO_INDIRECT_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KITS RESTO INDIRECT (FR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Change_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Approval Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latex_Gloves_FR__c</fullName>
        <label>Latex Gloves (FR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lecture_Abstract_D__c</fullName>
        <label>Lecture Abstract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lecture_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Lookup to the Lecture Library. The Lecture Name and Abstract of the Lecture will be added to the session if those values are not filled with information</description>
        <inlineHelpText>A Lookup to the Lecture Library. The Lecture Name and Abstract of the Lecture will be added to the session if those values are not filled with information</inlineHelpText>
        <label>Lecture Title</label>
        <referenceTo>Lecture__c</referenceTo>
        <relationshipLabel>Campaign Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Local_Contact_Person__c</fullName>
        <label>Local Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAX_TUITION_FOR_WORKFLOW__c</fullName>
        <formula>MAX(  Tuition_Clinician__c ,  Tuition_Laboratory__c,  Tuition_Staff__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAX TUITION FOR WORKFLOW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MISE_EN_FORME_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used for PREP in France</description>
        <label>MISE EN FORME (FR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_Check_To__c</fullName>
        <description>Used on NA Activity Request Form</description>
        <label>Mail Check To:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Printing_Actual__c</fullName>
        <label>Mailing &amp; Printing (Actual)</label>
        <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Revenue_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Mailing &amp; Printing</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mailing_Printing_Budget__c</fullName>
        <label>Mailing &amp; Printing (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailing_list_provided_by__c</fullName>
        <label>Mailing list provided by:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Co-sponsor</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>List: Salesforce.com</fullName>
                </value>
                <value>
                    <fullName>Purchase List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Make_Check_Payable_to__c</fullName>
        <description>Used on NA Activity Request Form</description>
        <label>Make Check Payable to:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BeNeLu</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DEX</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Nordic</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_End_Date__c</fullName>
        <description>This date is updated by Eloqua and sets the date for when the marketing team completed the promotions efforts for this specific Campaign.</description>
        <inlineHelpText>This is the date when the marketing team completed their promotions efforts for this specific Campaign.</inlineHelpText>
        <label>Marketing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Start_Date__c</fullName>
        <description>This date is updated by Eloqua and sets the date for when the marketing team began the promotions efforts for this specific Campaign.</description>
        <inlineHelpText>This is the date when the marketing team began their promotions efforts for this specific Campaign.</inlineHelpText>
        <label>Marketing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maximum_of_Participants_Reached__c</fullName>
        <formula>of_Available_Event_Seats__c  &lt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum # of Participants Reached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meal_End_Time__c</fullName>
        <label>Meal End Time</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Start_Time__c</fullName>
        <label>Meal Start Time</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meals_Included__c</fullName>
        <label>Meals Included</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Breakfast &amp; Lunch</fullName>
                </value>
                <value>
                    <fullName>Lunch &amp; Dinner</fullName>
                </value>
                <value>
                    <fullName>Breakfast, Lunch &amp; Dinner</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>All meals during event.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimal_Participants_reached__c</fullName>
        <formula>of_Event_Attendees__c  &gt;=  Minimal_Participants_required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimal # Participants reached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimal_Participants_required__c</fullName>
        <label>Minimal # Participants required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Sessions_Logistics_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if speaker is engaged at several sessions at this event - means that logistics details are captured in the data of this session.</inlineHelpText>
        <label>Multiple Sessions - Logistics Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Campaigns_Campaign_Coordinator__c</fullName>
        <formula>IF( $User.Id =  Campaign_Coordinator__r.Id || $User.Id =     HQ_Campaign_Coordinator__c    , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Campaigns (Campaign Coordinator)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NA_Co_Sponsor_of_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NA: Co-Sponsor of Event</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (NA: Co-Sponsor of Event)</relationshipLabel>
        <relationshipName>CampaignsSponsorship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NA_Initiative__c</fullName>
        <label>NA: Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GP Education</fullName>
                </value>
                <value>
                    <fullName>CEREC GP</fullName>
                </value>
                <value>
                    <fullName>GP Base Business</fullName>
                </value>
                <value>
                    <fullName>GP Bundles</fullName>
                </value>
                <value>
                    <fullName>Specialist Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NA_Materials__c</fullName>
        <inlineHelpText>After this form is saved, please attach the appropriate forms to this record to request Hands-on Material, literature, promo-items or Display Materials</inlineHelpText>
        <label>NA: Materials</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hands-on Material</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Promo items</fullName>
                </value>
                <value>
                    <fullName>Quickscreen and/or 10 ft pop-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NA_Program_Module__c</fullName>
        <label>NA: Program Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Implant diagnosis and treatment planning for single-tooth restorations</fullName>
                </value>
                <value>
                    <fullName>The evolution of single tooth implant-supported restorations</fullName>
                </value>
                <value>
                    <fullName>Bone grafting techniques for restorative success with implant therapy</fullName>
                </value>
                <value>
                    <fullName>Digital solutions for single-tooth restorations</fullName>
                </value>
                <value>
                    <fullName>Implant therapy for the edentulous patient: A review of the latest workflow and treatment options</fullName>
                </value>
                <value>
                    <fullName>The fully-edentulous patient: Optimizing treatment outcomes with digital technology</fullName>
                </value>
                <value>
                    <fullName>Redefining stability and comfort: The latest patient-specific edentulous solution</fullName>
                </value>
                <value>
                    <fullName>Treatment of the edentulous patient using angled implants: Combining technology and design</fullName>
                </value>
                <value>
                    <fullName>Custom program (requires RM and Director approval)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Venue__c</fullName>
        <description>Used for the Activity Request form in North America, populated by the DM. Workflow updates the Venue Lookup field</description>
        <inlineHelpText>If Venue is yet to be determined, please indicated &quot;TBD&quot;</inlineHelpText>
        <label>Name of Venue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Dealer_Sales_Rep_by_Email__c</fullName>
        <label>Notify Dealer Sales Rep by Email?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OBTURATION_CALAMUS_BEEFILL_FR__c</fullName>
        <label>OBTURATION CALAMUS/BEEFILL (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBTURATION_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used for PREP in France</description>
        <label>OBTURATION (FR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OBTURATION_OBTURATORS_FR__c</fullName>
        <label>OBTURATION OBTURATORS (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBTURATION_POST_SPACE_BUR_FR__c</fullName>
        <label>OBTURATION POST SPACE BUR (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBTURATION_RANGE_TO_CHECK_FR__c</fullName>
        <label>OBTURATION RANGE TO CHECK (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBTURATION_TANKS_THERMAPREP_FR__c</fullName>
        <label>OBTURATION TANKS THERMAPREP (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBTURATION_THERMACUT_FR__c</fullName>
        <label>OBTURATION THERMACUT (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBTURATION_THERMAFILS_FR__c</fullName>
        <label>OBTURATION THERMAFILS (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBTURATION_TOP_SEAL_FR__c</fullName>
        <label>OBTURATION TOP SEAL (FR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTHER_MATERIAL_QUANTITY_AND_NAME__c</fullName>
        <label>Other Material (Quantity and Name)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Program_Post_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on NA Activity Request Form</description>
        <inlineHelpText>Check if you&apos;d like this posted, otherwise leave blank</inlineHelpText>
        <label>Open Program - Post on Website?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organizer_additional_information_AT__c</fullName>
        <description>Information concerning the organizer(s)</description>
        <label>Organizer additional information (AT)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Actual__c</fullName>
        <label>Other/Uncategorized (Actual)</label>
        <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Revenue_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Other/Uncategorized</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Budget__c</fullName>
        <label>Other/Uncategorized (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Cost_Notes__c</fullName>
        <description>Used on NA Activity Request Form</description>
        <label>Other Cost Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Implant_Companies_in_the_Area__c</fullName>
        <description>Used for the Activity Request form in North America</description>
        <inlineHelpText>Other Implant Companies with a strong presence in your area</inlineHelpText>
        <label>Other Implant Companies in the Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Delete Q3 2017 if not used</description>
        <label>Other - TO BE DELETED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_equipment_Name_FR__c</fullName>
        <description>Used in France to bring equipment to Campaigns</description>
        <label>Other equipment Name (FR)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_equipment_Number_FR__c</fullName>
        <description>Used in France to bring equipment to Campaigns</description>
        <label>Other equipment Number (FR)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_equipment_Quantity_FR__c</fullName>
        <description>Used in France to bring equipment to Campaigns</description>
        <label>Other equipment Quantity (FR)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overall Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>text(Owner.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_User_Country__c</fullName>
        <description>The Owners&apos; User Country. Use in reports to split campaigns by country</description>
        <formula>TEXT(Owner.User_Country__c)</formula>
        <inlineHelpText>The Owners&apos; User Country.</inlineHelpText>
        <label>Owner User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREP__c</fullName>
        <description>To be used for PREP in France</description>
        <label>PREP BRAND (FR)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WOG</fullName>
                </value>
                <value>
                    <fullName>Reciproc Blue</fullName>
                </value>
                <value>
                    <fullName>PTG</fullName>
                </value>
                <value>
                    <fullName>PTN</fullName>
                </value>
                <value>
                    <fullName>PTU RTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_Empreinte_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used only in France</description>
        <label>Pack Empreinte (FR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pack_Hygiene_FR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used only in France</description>
        <label>Pack Hygiene (FR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign_DI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link the Campaign to an overall Parent Campaign. Used for e.g. large congresses, road-shows or modular courses to collect several Campaigns under one &quot;umbrella&quot;.</description>
        <inlineHelpText>Link the Campaign to an overall Parent Campaign. Used for e.g. large congresses, road-shows or modular courses to collect several Campaigns under one &quot;umbrella&quot;.</inlineHelpText>
        <label>Parent Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Campaign</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign_ID_DI__c</fullName>
        <description>Displays the Parent Campaign ID. Used for custom links reports at the Parent Campaign</description>
        <formula>Parent_Campaign_DI__r.Id</formula>
        <inlineHelpText>Displays the Parent Campaign ID</inlineHelpText>
        <label>Parent Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used on sessions to show what Campaign is the parent Campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participating_Accounts__c</fullName>
        <description>For internal use only</description>
        <label>Participating Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participation_Fees_Actual_Formula__c</fullName>
        <description>Formula to use get a postive value for Participation fees</description>
        <formula>0- Participation_Fees_Actual__c</formula>
        <label>Participation Fees (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Participation_Fees_Actual__c</fullName>
        <label>Participation Fees (Actual)</label>
        <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Revenue_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Participation Fees</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Participation_Fees_Budget__c</fullName>
        <label>Participation Fees (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pig_Jaws_FR__c</fullName>
        <label>Pig Jaws (FR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_event_registration_to_council__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fill in after an event if you sent the regulatory information to the order council</description>
        <inlineHelpText>Fill in after an event if you sent the regulatory information to the order council</inlineHelpText>
        <label>Post event registration to council (FR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Program_Dates__c</fullName>
        <inlineHelpText>Please be as specific as you can. Dates should not be seen as confirmed until confirmation received.</inlineHelpText>
        <label>Preferred Program Date/s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Program_Lenght__c</fullName>
        <defaultValue>&quot;Please enter preferred program length.&quot;</defaultValue>
        <label>Preferred Program Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>